--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Clean Blog
+title:              Pirates Treasure
 email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+description:        Anything you want from studies,drawing to code.
 author:             Start Bootstrap
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
