--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Pirates Treasure
-email:              your-email@example.com
+email:              farhan.shakeel78600@gmail.com
 description:        Anything you want from studies,drawing to code.
-author:             Start Bootstrap
+author:             Farhan Shakeel
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
 
