--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    BlackrockDigital
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    
+facebook_username:  
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
