--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ twitter_username:
 github_username:    
 facebook_username:  
 linkedin_username:
+instagram_username: ultimate_pirate786
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
