--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:                "https://blackrockdigital.github.io"
 # Social Profiles
 twitter_username:   
 github_username:    
-facebook_username:  
+facebook_username: Farhan Shakeel 
 linkedin_username:
 instagram_username: ultimate_pirate786
 
