--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ linkedin_username:
 instagram_username: ultimate_pirate786
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics:   UA-157383541-1 # out your google-analytics code
 
 # Build settings
 markdown:           kramdown
