--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title:              Pirates Treasure
+title:              Farhan
 email:              farhan.shakeel78600@gmail.com
 description:        Anything you want from studies,drawing to code.
 author:             Farhan Shakeel
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://blackrockdigital.github.io"
+baseurl:            "/farhan"
+url:                "https://farhan786555.github.io/farhan"
 
 # Social Profiles
 twitter_username:   
