--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title:              Farhan
 email:              farhan.shakeel78600@gmail.com
 description:        Anything you want from studies,drawing to code.
 author:             Farhan Shakeel
-baseurl:            "/farhan"
-url:                "https://farhan786555.github.io/farhan"
+baseurl:            "/pirates-treasure"
+url:                "https://farhan786555.github.io/pirates-treasure"
 
 # Social Profiles
 twitter_username:   
