--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Farhan
+title:              Pirates Treasure
 email:              farhan.shakeel78600@gmail.com
 description:        Anything you want from studies,drawing to code.
 author:             Farhan Shakeel
@@ -7,7 +7,7 @@ url:                "https://farhan786555.github.io/pirates-treasure"
 
 # Social Profiles
 twitter_username:   
-github_username:    
+github_username: Farhan786555   
 facebook_username: Farhan Shakeel 
 linkedin_username:
 instagram_username: ultimate_pirate786
